Rename TMT Électricité to LMTE Électricité

--- a/tmt-electricite/index.html
+++ b/tmt-electricite/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TMT Électricité - Électricien Yvelines (78) | Dépannage & Rénovation</title>
+    <title>LMTE Électricité - Électricien Yvelines (78) | Dépannage & Rénovation</title>
     <meta name="description" content="TMT Électricité : Votre électricien de confiance dans le 78. Dépannage rapide, mise aux normes, installation et rénovation. Intervention Yvelines. Devis gratuit.">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="top-bar">Intervention rapide 78 Yvelines | 📞 01 23 45 67 89</div>
     <header>
         <div class="nav-container">
-            <a href="index.html" class="logo">TMT <span>Électricité</span></a>
+            <a href="index.html" class="logo">LMTE <span>Électricité</span></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
@@ -63,7 +63,7 @@
 
         <section style="background-color: var(--light);">
             <div class="section-title">
-                <h2>Pourquoi choisir TMT Électricité ?</h2>
+                <h2>Pourquoi choisir LMTE Électricité ?</h2>
                 <div class="line"></div>
             </div>
             <div class="features-grid">
@@ -106,7 +106,7 @@
     <footer>
         <div class="footer-grid">
             <div class="footer-col">
-                <h4>TMT Électricité</h4>
+                <h4>LMTE Électricité</h4>
                 <p>Votre partenaire confiance pour tous travaux d'électricité générale dans les Yvelines.</p>
             </div>
             <div class="footer-col">
@@ -121,14 +121,14 @@
             <div class="footer-col">
                 <h4>Contact</h4>
                 <ul>
-                    <li>📞 01 23 45 67 89</li>
-                    <li>📧 contact@tmt-electricite.fr</li>
+                    <li>📞 07 86 72 31 06</li>
+                    <li>📧 contact@lmte-electricite.com</li>
                     <li>📍 Yvelines (78), France</li>
                 </ul>
             </div>
         </div>
         <div class="copyright">
-            &copy; 2023 TMT Électricité. Tous droits réservés.
+            &copy; 2026 LMTE Électricité. Tous droits réservés.
         </div>
     </footer>
 </body>
