--- a/tmt-electricite/contact.html
+++ b/tmt-electricite/contact.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Contact & Devis Électricien Yvelines | TMT Électricité</title>
+    <title>Contact & Devis Électricien Yvelines | LMTE Électricité</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- HEADER -->
-    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 01 23 45 67 89</div>
+    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 07 86 72 31 06</div>
     <header>
         <div class="nav-container">
             <a href="index.html" class="logo">TMT <span>Électricité</span></a>
@@ -33,8 +33,8 @@
             <div class="grid-3">
                 <div>
                     <h3>Nos Coordonnées</h3>
-                    <p><strong>Téléphone :</strong> 01 23 45 67 89</p>
-                    <p><strong>Email :</strong> contact@tmt-electricite.fr</p>
+                    <p><strong>Téléphone :</strong> 07 86 72 31 06</p>
+                    <p><strong>Email :</strong> contact@lmte-electricite.com</p>
                     <p><strong>Adresse :</strong> 10 Rue de l'Exemple, 78000 Versailles</p>
                     <hr style="margin: 20px 0;">
                     <h3>Horaires</h3>
@@ -78,6 +78,6 @@
     </main>
 
     <!-- FOOTER -->
-     <footer><div class="copyright">&copy; 2023 TMT Électricité.</div></footer>
+     <footer><div class="copyright">&copy; 2026 LMTE Électricité.</div></footer>
 </body>
 </html>
