Update company name and contact information

--- a/tmt-electricite/installation.html
+++ b/tmt-electricite/installation.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Installation & Rénovation Électrique Yvelines | TMT Électricité</title>
+    <title>Installation & Rénovation Électrique Yvelines | LMTE Électricité</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- HEADER Identique -->
-    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 01 23 45 67 89</div>
+    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 07 86 72 31 06</div>
     <header>
         <div class="nav-container">
             <a href="index.html" class="logo">TMT <span>Électricité</span></a>
@@ -55,6 +55,6 @@
     </main>
 
     <!-- FOOTER Identique -->
-     <footer><div class="copyright">&copy; 2023 TMT Électricité.</div></footer>
+     <footer><div class="copyright">&copy; 2026 LMTE Électricité.</div></footer>
 </body>
 </html>
