--- a/tmt-electricite/normes.html
+++ b/tmt-electricite/normes.html
@@ -2,15 +2,15 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Mise aux Normes Électriques NFC 15-100 Yvelines | TMT</title>
+    <title>Mise aux Normes Électriques NFC 15-100 Yvelines | LMTE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- HEADER -->
-    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 01 23 45 67 89</div>
+    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 07 86 72 31 06</div>
     <header>
         <div class="nav-container">
-            <a href="index.html" class="logo">TMT <span>Électricité</span></a>
+            <a href="index.html" class="logo">LMTE <span>Électricité</span></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
@@ -51,6 +51,6 @@
     </main>
 
     <!-- FOOTER -->
-     <footer><div class="copyright">&copy; 2023 TMT Électricité.</div></footer>
+     <footer><div class="copyright">&copy; 2026 LMTE Électricité.</div></footer>
 </body>
 </html>
