--- a/tmt-electricite/zone.html
+++ b/tmt-electricite/zone.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Zone d'Intervention Électricien Yvelines 78 | TMT</title>
+    <title>Zone d'Intervention Électricien Yvelines 78 | LMTE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- HEADER -->
-    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 01 23 45 67 89</div>
+    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 07 86 72 31 06</div>
     <header>
         <div class="nav-container">
             <a href="index.html" class="logo">TMT <span>Électricité</span></a>
@@ -52,6 +52,6 @@
     </main>
 
     <!-- FOOTER -->
-     <footer><div class="copyright">&copy; 2023 TMT Électricité.</div></footer>
+     <footer><div class="copyright">&copy; 2026 LMTE Électricité.</div></footer>
 </body>
 </html>
