--- a/tmt-electricite/index.html
+++ b/tmt-electricite/index.html
@@ -11,7 +11,10 @@
     <div class="top-bar">Intervention rapide 78 Yvelines | 📞 01 23 45 67 89</div>
     <header>
         <div class="nav-container">
-            <a href="index.html" class="logo">LMTE <span>Électricité</span></a>
+            <a href="index.html" class="logo">
+    <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT Électricité">
+    
+</a>
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
