--- a/tmt-electricite/index.html
+++ b/tmt-electricite/index.html
@@ -10,22 +10,25 @@
 <body>
     <div class="top-bar">Intervention rapide 78 Yvelines | 📞 01 23 45 67 89</div>
     <header>
-        <div class="nav-container">
-            <a href="index.html" class="logo">
-    <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT Électricité">
-    
-</a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="zone.html">Zone 78</a></li>
-                    <li><a href="propos.html">À Propos</a></li>
-                    <li><a href="contact.html" class="btn-cta">Demander un Devis</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="nav-container">
+        <!-- Logo + Texte cliquable -->
+        <a href="index.html" class="logo">
+            <!-- Remplacez 'logo.png' par le nom exact de votre fichier -->
+            <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT"> 
+           
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="zone.html">Zone 78</a></li>
+                <li><a href="propos.html">À Propos</a></li>
+                <li><a href="contact.html" class="btn-cta">Devis</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
     <main>
         <div class="hero">
