Update company name from LMTE to TMT Électricité

--- a/tmt-electricite/index.html
+++ b/tmt-electricite/index.html
@@ -3,43 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LMTE Électricité - Électricien Yvelines (78) | Dépannage & Rénovation</title>
+    <title>TMT Électricité - Électricien Yvelines (78) | Dépannage & Rénovation</title>
     <meta name="description" content="TMT Électricité : Votre électricien de confiance dans le 78. Dépannage rapide, mise aux normes, installation et rénovation. Intervention Yvelines. Devis gratuit.">
+    <!-- Lien vers votre fichier CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Barre d'information supérieure -->
     <div class="top-bar">Intervention rapide 78 Yvelines | 📞 01 23 45 67 89</div>
-    <header>
-    <div class="nav-container">
-        <!-- Logo + Texte cliquable -->
-        <a href="index.html" class="logo">
-            <!-- Remplacez 'logo.png' par le nom exact de votre fichier -->
-            <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT"> 
-           
-        </a>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="zone.html">Zone 78</a></li>
-                <li><a href="propos.html">À Propos</a></li>
-                <li><a href="contact.html" class="btn-cta">Devis</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    <!-- Header avec Logo Image uniquement -->
+    <header>
+        <div class="nav-container">
+            <!-- Logo Image sans texte -->
+            <a href="index.html" class="logo">
+                <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT Électricité" style="max-height: 60px; width: auto;">
+            </a>
+
+            <!-- Navigation -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="zone.html">Zone 78</a></li>
+                    <li><a href="propos.html">À Propos</a></li>
+                    <li><a href="contact.html" class="btn-cta">Demander un Devis</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <main>
+        <!-- Section Hero (Bannière principale) -->
         <div class="hero">
             <h1>Expert Électricien dans les Yvelines</h1>
             <p>Dépannage, Installation, Rénovation et Mise aux normes. Service professionnel pour particuliers et entreprises.</p>
             <div style="margin-top: 20px;">
                 <a href="contact.html" class="btn-cta">Obtenir un devis gratuit</a>
-                <a href="depannage.html" style="background:transparent; border: 2px solid white; padding: 8px 20px; border-radius: 5px; margin-left: 10px;">Urgence Dépannage</a>
+                <a href="depannage.html" style="background:transparent; border: 2px solid white; color: white; padding: 8px 20px; border-radius: 5px; margin-left: 10px; font-weight: bold;">Urgence Dépannage</a>
             </div>
         </div>
 
+        <!-- Section Services -->
         <section>
             <div class="section-title">
                 <h2>Nos Services d'Électricité</h2>
@@ -67,9 +72,10 @@
             </div>
         </section>
 
+        <!-- Section Pourquoi nous choisir -->
         <section style="background-color: var(--light);">
             <div class="section-title">
-                <h2>Pourquoi choisir LMTE Électricité ?</h2>
+                <h2>Pourquoi choisir TMT Électricité ?</h2>
                 <div class="line"></div>
             </div>
             <div class="features-grid">
@@ -88,6 +94,7 @@
             </div>
         </section>
 
+        <!-- Section Témoignages -->
         <section>
             <div class="section-title">
                 <h2>Ce que disent nos clients</h2>
@@ -109,10 +116,11 @@
         </section>
     </main>
 
+    <!-- Pied de page -->
     <footer>
         <div class="footer-grid">
             <div class="footer-col">
-                <h4>LMTE Électricité</h4>
+                <h4>TMT Électricité</h4>
                 <p>Votre partenaire confiance pour tous travaux d'électricité générale dans les Yvelines.</p>
             </div>
             <div class="footer-col">
@@ -127,8 +135,8 @@
             <div class="footer-col">
                 <h4>Contact</h4>
                 <ul>
-                    <li>📞 07 86 72 31 06</li>
-                    <li>📧 contact@lmte-electricite.com</li>
+                    <li>📞 01 23 45 67 89</li>
+                    <li>📧 contact@tmt-electricite.fr</li>
                     <li>📍 Yvelines (78), France</li>
                 </ul>
             </div>
