Update contact information and company name

--- a/tmt-electricite/index.html
+++ b/tmt-electricite/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <!-- Barre d'information supérieure -->
-    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 01 23 45 67 89</div>
+    <div class="top-bar">Intervention rapide 78 Yvelines | 📞 07 86 72 31 06</div>
 
     <!-- Header avec Logo Image uniquement -->
     <header>
         <div class="nav-container">
             <!-- Logo Image sans texte -->
             <a href="index.html" class="logo">
-                <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT Électricité" style="max-height: 120px; width: auto;">
+                <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT Électricité" style="max-height: 150px; width: auto;">
             </a>
 
             <!-- Navigation -->
@@ -75,7 +75,7 @@
         <!-- Section Pourquoi nous choisir -->
         <section style="background-color: var(--light);">
             <div class="section-title">
-                <h2>Pourquoi choisir TMT Électricité ?</h2>
+                <h2>Pourquoi choisir LMTE Électricité ?</h2>
                 <div class="line"></div>
             </div>
             <div class="features-grid">
@@ -120,7 +120,7 @@
     <footer>
         <div class="footer-grid">
             <div class="footer-col">
-                <h4>TMT Électricité</h4>
+                <h4>LMTE Électricité</h4>
                 <p>Votre partenaire confiance pour tous travaux d'électricité générale dans les Yvelines.</p>
             </div>
             <div class="footer-col">
@@ -135,7 +135,7 @@
             <div class="footer-col">
                 <h4>Contact</h4>
                 <ul>
-                    <li>📞 01 23 45 67 89</li>
+                    <li>📞 07 86 72 31 06</li>
                     <li>📧 contact@tmt-electricite.fr</li>
                     <li>📍 Yvelines (78), France</li>
                 </ul>
