Add logo image to normes.html header

--- a/tmt-electricite/normes.html
+++ b/tmt-electricite/normes.html
@@ -10,7 +10,12 @@
     <div class="top-bar">Intervention rapide 78 Yvelines | 📞 07 86 72 31 06</div>
     <header>
         <div class="nav-container">
-            <a href="index.html" class="logo">LMTE <span>Électricité</span></a>
+            <!-- Logo Image sans texte -->
+            <a href="index.html" class="logo">
+                <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT Électricité" style="max-height: 150px; width: auto;">
+            </a>
+
+            <!-- Navigation -->
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
