Update company name from TMT to LMTE

--- a/tmt-electricite/depannage.html
+++ b/tmt-electricite/depannage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dépannage Électrique Yvelines (78) | Urgence & Réparation - TMT</title>
-    <meta name="description" content="Panne de courant ? Court-circuit ? TMT Électricité intervient rapidement dans le 78 (Yvelines). Recherche de panne, réparation tableau, mise en sécurité.">
+    <title>Dépannage Électrique Yvelines (78) | Urgence & Réparation - LMTE</title>
+    <meta name="description" content="Panne de courant ? Court-circuit ? LMTE Électricité intervient rapidement dans le 78 (Yvelines). Recherche de panne, réparation tableau, mise en sécurité.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -38,7 +38,7 @@
             <h1>Dépannage Électrique 78</h1>
             <p>Intervention rapide pour vos pannes d'électricité, coupures et mises en sécurité dans les Yvelines.</p>
             <div style="margin-top: 20px;">
-                <a href="tel:0123456789" class="btn-cta" style="background-color: #ef4444;">📞 URGENCE : 01 23 45 67 89</a>
+                <a href="tel:0786723106" class="btn-cta" style="background-color: #ef4444;">📞 URGENCE : 07 86 72 31 06</a>
             </div>
         </div>
 
@@ -129,7 +129,7 @@
                         <li>Appelez un professionnel immédiatement.</li>
                     </ol>
                     <br>
-                    <a href="tel:0123456789" style="color: #ef4444; font-weight: bold; text-decoration: underline;">Appeler TMT Électricité</a>
+                    <a href="tel:0786723106" style="color: #ef4444; font-weight: bold; text-decoration: underline;">Appeler LMTE Électricité</a>
                 </div>
             </div>
         </section>
@@ -154,7 +154,7 @@
     <footer>
         <div class="footer-grid">
             <div class="footer-col">
-                <h4>TMT Électricité</h4>
+                <h4>LMTE Électricité</h4>
                 <p>Votre partenaire confiance pour tous travaux d'électricité générale dans les Yvelines.</p>
             </div>
             <div class="footer-col">
@@ -169,14 +169,14 @@
             <div class="footer-col">
                 <h4>Contact</h4>
                 <ul>
-                    <li>📞 01 23 45 67 89</li>
-                    <li>📧 contact@tmt-electricite.fr</li>
+                    <li>📞 07 86 72 31 06</li>
+                    <li>📧 contact@lmte-electricite.fr</li>
                     <li>📍 Yvelines (78), France</li>
                 </ul>
             </div>
         </div>
         <div class="copyright">
-            &copy; 2023 TMT Électricité. Tous droits réservés.
+            &copy; 2026 LMTE Électricité. Tous droits réservés.
         </div>
     </footer>
 </body>
