Update logo and navigation link styles in services.html

--- a/tmt-electricite/services.html
+++ b/tmt-electricite/services.html
@@ -12,15 +12,18 @@
     <div class="top-bar">Intervention rapide 78 Yvelines | 📞 07 86 72 31 06</div>
 
     <!-- Header avec Logo Image -->
-    <header>
+   <header>
         <div class="nav-container">
+            <!-- Logo Image sans texte -->
             <a href="index.html" class="logo">
-                <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT Électricité" style="max-height: 60px; width: auto;">
+                <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo LMTE Électricité" style="max-height: 150px; width: auto;">
             </a>
+
+            <!-- Navigation -->
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="services.html" style="color: var(--secondary);">Services</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="zone.html">Zone 78</a></li>
                     <li><a href="propos.html">À Propos</a></li>
                     <li><a href="contact.html" class="btn-cta">Demander un Devis</a></li>
