Update contact email address in services.html

--- a/tmt-electricite/services.html
+++ b/tmt-electricite/services.html
@@ -161,7 +161,7 @@
                 <h4>Contact</h4>
                 <ul>
                     <li>📞 01 23 45 67 89</li>
-                    <li>📧 contact@tmt-electricite.fr</li>
+                    <li>📧 contact@lmte-electricite.fr</li>
                     <li>📍 Yvelines (78), France</li>
                 </ul>
             </div>
