Update company name in article-linky.html

--- a/tmt-electricite/article-linky.html
+++ b/tmt-electricite/article-linky.html
@@ -82,7 +82,7 @@
                 <!-- Appel à l'action en bas d'article -->
                 <div style="margin-top: 40px; padding: 20px; background: #e0f2fe; border-radius: 8px; border-left: 4px solid var(--secondary);">
                     <h3 style="margin-top:0;">Besoin d'un diagnostic électrique ?</h3>
-                    <p>TMT Électricité intervient dans tout le 78.</p>
+                    <p>LMTE Électricité intervient dans tout le 78.</p>
                     <br>
                     <a href="contact.html" class="btn-cta">Demander un devis gratuit</a>
                 </div>
