Update blog date and link in blog.html

--- a/tmt-electricite/blog.html
+++ b/tmt-electricite/blog.html
@@ -63,12 +63,12 @@
                     <div class="blog-content">
                         <div class="blog-meta">
                             <span class="blog-tag">Économies</span>
-                            <span>05 Nov 2023</span>
+                            <span>4 Jan 2024</span>
                         </div>
                         <h3 class="blog-title">5 astuces pour réduire sa facture électrique</h3>
                         <p>L'hiver approche. Découvrez comment quelques gestes simples et le passage aux LED peuvent alléger votre facture d'électricité.</p>
                         <br>
-                        <a href="#" class="read-more">Lire l'article →</a>
+                        <a href="article-economies.html" class="read-more">Lire l'article →</a>
                     </div>
                 </div>
 
