Update links and contact number in blog.html

--- a/tmt-electricite/blog.html
+++ b/tmt-electricite/blog.html
@@ -83,7 +83,7 @@
                         <h3 class="blog-title">Pourquoi mon disjoncteur saute tout le temps ?</h3>
                         <p>Surcharge, court-circuit ou appareil défectueux ? Apprenez à identifier les causes d'une coupure de courant.</p>
                         <br>
-                        <a href="#" class="read-more">Lire l'article →</a>
+                        <a href="article-disjoncteur.html" class="read-more">Lire l'article →</a>
                     </div>
                 </div>
 
@@ -109,7 +109,7 @@
             <div class="footer-col">
                 <h4>Contact</h4>
                 <ul>
-                    <li>📞 7 86 72 31 06</li>
+                    <li>📞 07 86 72 31 06</li>
                     <li>📍 Yvelines (78)</li>
                 </ul>
             </div>
