Update logo image in depannage.html

--- a/tmt-electricite/depannage.html
+++ b/tmt-electricite/depannage.html
@@ -16,7 +16,7 @@
         <div class="nav-container">
             <!-- Logo Image sans texte -->
             <a href="index.html" class="logo">
-                <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT Électricité" style="max-height: 150px; width: auto;">
+                <img src="logo lmte.jpg" alt="Logo TMT Électricité" style="max-height: 150px; width: auto;">
             </a>
 
             <!-- Navigation -->
