--- a/tmt-electricite/article-disjoncteur.html
+++ b/tmt-electricite/article-disjoncteur.html
@@ -16,7 +16,7 @@
     <header>
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <img src="Gemini_Generated_Image_w0khqfw0khqfw0kh.png" alt="Logo TMT" style="max-height: 150px; width: auto;">
+                <img src="logo lmte.jpg" alt="Logo TMT" style="max-height: 150px; width: auto;">
             </a>
             <nav>
                 <ul>
