Update contact email and address in contact.html

--- a/tmt-electricite/contact.html
+++ b/tmt-electricite/contact.html
@@ -39,8 +39,7 @@
                 <div>
                     <h3>Nos Coordonnées</h3>
                     <p><strong>Téléphone :</strong> 07 86 72 31 06</p>
-                    <p><strong>Email :</strong> contact@lmte-electricite.com</p>
-                    <p><strong>Adresse :</strong> 10 Rue de l'Exemple, 78000 Versailles</p>
+                    <p><strong>Email :</strong> contact@lmte-electricite.fr</p>
                     <hr style="margin: 20px 0;">
                     <h3>Horaires</h3>
                     <p>Lundi - Vendredi : 8h00 - 19h00</p>
